--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "better-sqlite3": "^11.9.0",
     "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/better-sqlite3": "^7.6.12",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.13.8",
